added monthly changes, calculations of beta and std and portfolio std

--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -1,7 +1,16 @@
 {% extends "layouts/main.html" %}
 {% block title %}Portfolio Summary{% endblock %}
 {% block content %}
-{{ dataframe_returns | safe}}
+<p>Portfolio returns</p>
+{{ df_returns | safe}}
 {{ plot_returns_script | safe }}
 {{ plot_returns_div | safe }}
+
+<p>Jensen's Alpha</p>
+{{ ptf_jensen_alpha | safe }}
+
+<p>Beta</p>
+{{ ptf_beta | safe }}
+
+
 {% endblock %}
