--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -13,6 +13,7 @@
 {{ df_stock_corr | safe}}
 {{ plot_corr_script | safe }}
 {{ plot_corr_div | safe }}
+<img src="data:image/png;base64, {{ plot_url }}">
 
 <h2>Optimizations</h2>
 
