Multiple changes, finalized portfolio section, trades section, risk section and started markowitz section

--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -1,27 +1,79 @@
 {% extends "layouts/main.html" %}
-{% block title %}Portfolio Summary{% endblock %}
+{% block title %}Robinhood portfolio{% endblock %}
+
 {% block content %}
-<h2>Portfolio performance</h2>
-Latest portfolio snapshot
-{{ df_returns | safe}}
-<p>(*) Return rate for the portfolio is based on the current cost basis and does not include any cash remaining in the account.</p>
-{{ plot_returns_script | safe }}
-{{ plot_returns_div | safe }}
-<p>Portfolio stats</p>
-{{ ptf_stats | safe }}
-<p>Best and worst closed positions</p>
-{{ df_closed_positions | safe}}
-<p>Best and worst open positions</p>
-{{ df_open_positions | safe}}
+<a href="https://github.com/omdv/robinhood-portfolio" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
-<h2>Risk analysis</h2>
-
-{{ df_stock_risk | safe}}
-<!-- {{ df_stock_corr | safe}} -->
-<!-- {{ plot_corr_script | safe }} -->
-<!-- {{ plot_corr_div | safe }} -->
-{{ plot_corr_svg | safe }}
-
-<h2>Efficient frontier</h2>
-
+<span><a href="javascript:hideAllText()">Toggle all text</a></span>
+<div class="section">
+  <h2>Introduction</h2>
+  <p>This tool uses the <a href="https://github.com/Jamonek/Robinhood">unofficial Robinhood API</a> to download the history of orders and dividends of your Robinhood account. Since there is no official Robinhood API using oauth you need to enter your account information and temporarily disable the two-factor authentication to download the data. The script runs locally and does not save your account information - feel free to verify/fork the source code. It is your responsibility to make sure that your account is safe.</p>
+  <p>It also needs the market data for securities you traded, including the history of the market index such as <a href="https://en.wikipedia.org/wiki/S%26P_500_Index">S&P 500</a> which is used as the benchmark. This data is downloaded from open sources, so please use it responsibly and do not spam requests as you may get banned, or worse, prevent others from using it as well.</p>
+  <p><strong>Refresh to download the Robinhood data first. The market data will be downloaded only for the corresponding securities and dates.</strong></p>
+  <table style="margin:1em auto;">
+    <tr>
+      <td style="text-align: right">Robinhood data&nbsp;</td>
+      <td>{{ rb_dates[0] | safe }} - {{ rb_dates[1] | safe }}</td>
+      <td>
+        <form class="form-inline" action="/" method="POST">
+          <input type="hidden" name="refresh" value="robinhood">
+          {% if rb_dates[1] != today %}
+          <button class="refresh" type="submit"><i class="fa fa-refresh"></i></button>
+          {% endif %}
+        </form>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: right">Market data&nbsp;</td>
+      <td>{{ mkt_dates[0] | safe }} - {{ mkt_dates[1] | safe }}</td>
+      <td>
+        <form class="form-inline" action="/" method="POST">
+          <input type="hidden" name="refresh" value="market">
+          {% if mkt_dates[1] != today %}
+          <button class="refresh" type="submit"><i class="fa fa-refresh"></i></button>
+          {% endif %}
+        </form>
+      </td>
+    </tr>
+  </table>
+</div>
+<div class="section">
+  <h2>Portfolio performance</h2>
+  <p>Below is the summary of your portfolio performance starting from {{ rb_dates[0] | safe }} to {{ rb_dates[1] | safe }}. It consists of <a href="http://www.investopedia.com/terms/r/realizedprofit.asp">realized gains</a> which are the results of position liquidations by sell orders, dividend payouts and <a href="http://www.investopedia.com/terms/u/unrealizedgain.asp">unrealized gains</a> from the remaining long positions.</p>
+  {{ portfolio["returns"] | safe}}
+  <div class="plot-wrapper">
+    {{ plot_returns_svg | safe }}
+  </div>
+  <p>The total return rate of the portfolio is {{ portfolio["total_return"] | safe }} or {{ portfolio["annual_return"] | safe }} annualized. The market index gained {{ portfolio["market_return"] | safe}} during the same period.</p>
+  <p>Portfolio metric presented below is calculated based on the <strong>daily</strong> returns and using S&P 500 index as the benchmark with risk-free daily return rate set to 0%.</p>
+  {{ portfolio["stats"] | safe }}
+</div>
+<div class="section">
+  <h2>Trades</h2>
+  <p>There are {{ trades["open_orders"] | safe }} buy orders and {{ trades["closed_orders"] | safe }} sell orders, resulting in ${{ trades["fees"] | safe }} of brokerage fees. Below is the summary of the best and worst (by absolute amount) closed and open positions.</p>
+  {{trades["closed"] | safe}}
+  {{trades["open"] | safe}}
+  <span><a href="javascript:toggleVisibility('.dataframe.orders')">Toggle all orders</a></span>
+  {{trades["all"] | safe}}
+</div>
+<div class="section">
+  <h2>Risk analysis</h2>
+  <p>This section presents the risk metric for every individual asset. Calculations are based on daily returns <strong>and do not include dividends.</strong></p>
+  <p>The chart below shows the <a href="https://en.wikipedia.org/wiki/Pearson_correlation_coefficient">correlation coefficients</a>. The table shows the risk metric for individual securities.</p>
+  <div class="plot-wrapper">
+    {{ plot_corr_svg | safe }}
+  </div>
+  {{ stock["risk"] | safe}}
+</div>
+<div class="section">
+  <h2>Efficient frontier</h2>
+  <p>In this section we use the <a href="https://github.com/czielinski/portfolioopt">portfolio optimization</a> library to construct some of Markowitz portfolios. Using long positions only since Robinhood does not allow shorting.</p>
+  {% for item in markowitz %}
+    <span>{{ item.name | safe }}</span>
+    <div class="row">
+      <div class="col-md-3">{{ item.weights | safe }}</div>
+      <div class="col-md-4">{{ item.stats | safe }}</div>
+    </div>
+  {% endfor %}
+</div>
 {% endblock %}
