--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -1,77 +1,61 @@
 <!doctype html>
 <head>
-<meta charset="utf-8">
-<title>{% block title %}{% endblock %}</title>
 
-<!-- meta -->
-<meta name="description" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<!-- /meta -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- styles -->
-<!-- 
-<link type="text/css" rel="stylesheet" href="/static/css/font-awesome-4.1.0.min.css" />
-<link type="text/css" rel="stylesheet" href="/static/css/bootstrap-3.1.1.min.css">
-<link type="text/css" rel="stylesheet" href="/static/css/bootstrap-theme-3.1.1.min.css" />
--->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/static/css/main.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.6/bokeh.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.6/bokeh.min.css.map" type="text/css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="/static/css/main.css">
-
-<!-- /styles -->
-
-<!-- favicons -->
-<!-- 
-<link rel="shortcut icon" href="/static/ico/favicon.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="/static/ico/favicon.png">
--->
-<!-- /favicons -->
-
-<!-- scripts -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/0.12.6/bokeh.js"></script>
-<!-- <script src="/static/js/libs/modernizr-2.8.2.min.js"></script> -->
-<!--[if lt IE 9]><script src="/static/js/libs/respond-1.4.2.min.js"></script><![endif]-->
-<!-- /scripts -->
-
+  <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 
-  <!-- Wrap all page content here -->
-  <div id="wrap">
+  <!-- {% block header %}{% endblock %} -->
 
+  <!-- Wrap all page content here -->
+  <div class="wrapper">
     <!-- Begin page content -->
     <main id="content" role="main" class="container">
       {% block content %}{% endblock %}
     </main>
-
   </div>
 
-  <footer class="footer">
+  <div class="footer">
     <div class="container">
-      <span class="text-muted">Robinhood client &copy; All Rights Reserved.</span>
+      <span>&copy; 2017 Robinhood portfolio analyzer</span>
     </div>
-  </footer>
+  </div>
 
-<!--   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
-  <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
-  <script type="text/javascript" src="/static/js/plugins.js" defer></script>
-  <script type="text/javascript" src="/static/js/script.js" defer></script>
-  <script>
-  window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
-  Modernizr.load({
-    load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
-  });
-  </script> -->
+  <script type="text/javascript">
+    function toggleVisibility(selector) {
+       var e = document.querySelectorAll(selector)[0];
+       if (e.style.display){
+          e.style.display = '';
+       }
+       else
+          e.style.display = 'none';
+    }
+
+    function hideAllText() {
+      var list = document.querySelectorAll('p');
+      for (x in list) {
+        if (list[x].style.display === 'none') {
+          list[x].style.display = 'block';
+        } else {
+          list[x].style.display = 'none';
+        }
+      }
+    }
+  </script>
+
+  <!-- boostrap -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
 </body>
 </html>
