--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -13,8 +13,6 @@
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-
-  <!-- {% block header %}{% endblock %} -->
 
   <!-- Wrap all page content here -->
   <div class="wrapper">
@@ -32,30 +30,45 @@
 
   <script type="text/javascript">
     function toggleVisibility(selector) {
-       var e = document.querySelectorAll(selector)[0];
-       if (e.style.display){
-          e.style.display = '';
-       }
-       else
-          e.style.display = 'none';
+     var e = document.querySelectorAll(selector)[0];
+     if (e.style.display){
+      e.style.display = '';
     }
+    else
+      e.style.display = 'none';
+  }
 
-    function hideAllText() {
-      var list = document.querySelectorAll('p');
-      for (x in list) {
-        if (list[x].style.display === 'none') {
-          list[x].style.display = 'block';
-        } else {
-          list[x].style.display = 'none';
-        }
+  function hideAllText() {
+    var list = document.querySelectorAll('p');
+    for (x in list) {
+      if (list[x].style.display === 'none') {
+        list[x].style.display = 'block';
+      } else {
+        list[x].style.display = 'none';
       }
     }
-  </script>
+  }
 
-  <!-- boostrap -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  var modal = document.getElementById('myModal');
+  var btn = document.getElementById('openLogin');
+  var span = document.getElementsByClassName('close-modal')[0];
+
+  btn.onclick = function() {
+    modal.style.display = "block";
+  }
+
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+
+</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
 </body>
 </html>
