Changed market source to morningstar

--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -79,7 +79,7 @@
   }
 
 </script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script> -->
 
 </body>
 </html>
